details for full and slim releases

--- a/MediaTrayMaster/MediaTrayMaster.csproj
+++ b/MediaTrayMaster/MediaTrayMaster.csproj
@@ -10,6 +10,14 @@
     <PackageIcon>app.png</PackageIcon>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <Content Include="app.ico" />
   </ItemGroup>
